--- a/public/assets/css/timeline.css
+++ b/public/assets/css/timeline.css
@@ -7,22 +7,51 @@ body {
   box-sizing: border-box;
 }
 
-/* line 12, ../scss/timeline.scss */
-.timeline_item > *:not(span) {
-  width: 50%;
-  float: left;
+/* line 10, ../scss/timeline.scss */
+.top_part, .button_part {
+  width: 100%;
 }
-/* line 19, ../scss/timeline.scss */
-.timeline_item .right_part {
+
+/* line 15, ../scss/timeline.scss */
+.timeline_item {
+  display: inline-block;
+}
+/* line 17, ../scss/timeline.scss */
+.timeline_item .top_part {
+  float: left;
+  background-color: pink;
+  display: inline-block;
+  width: 100%;
+  padding: 15px;
+}
+/* line 24, ../scss/timeline.scss */
+.timeline_item .top_part .left_part {
+  float: left;
+  width: 50%;
+}
+/* line 28, ../scss/timeline.scss */
+.timeline_item .top_part .left_part .input {
+  width: 100%;
+}
+/* line 34, ../scss/timeline.scss */
+.timeline_item .top_part .right_part {
+  float: left;
+  width: 50%;
+  padding: 0px 0px 0px 50px;
+}
+/* line 42, ../scss/timeline.scss */
+.timeline_item .button_part {
+  float: left;
+  background-color: green;
   height: 300px;
 }
 
-/* line 24, ../scss/timeline.scss */
+/* line 50, ../scss/timeline.scss */
 ._container {
   text-align: right;
 }
 
-/* line 28, ../scss/timeline.scss */
+/* line 54, ../scss/timeline.scss */
 .timeline_item {
   margin: 20px 0px;
   width: 90%;
@@ -34,27 +63,27 @@ body {
   -webkit-box-shadow: 2px 2px 3px 2px #616161;
   box-shadow: 2px 2px 3px 2px #616161;
 }
-/* line 43, ../scss/timeline.scss */
+/* line 69, ../scss/timeline.scss */
 .timeline_item:after, .timeline_item:before, .timeline_item .timeline_date {
   content: "";
   display: block;
   position: absolute;
   left: -10%;
 }
-/* line 50, ../scss/timeline.scss */
+/* line 76, ../scss/timeline.scss */
 .timeline_item .timeline_date {
   display: inline;
   top: calc(20% - 3px);
   left: calc(-10% + 12px);
 }
-/* line 56, ../scss/timeline.scss */
+/* line 82, ../scss/timeline.scss */
 .timeline_item:before {
   top: 0px;
   background-color: #616161;
   width: 3px;
   height: calc(100% + 44px);
 }
-/* line 63, ../scss/timeline.scss */
+/* line 89, ../scss/timeline.scss */
 .timeline_item:after {
   width: 15px;
   height: 15px;
