continue with dropdown

--- a/public/assets/scss/timeline.scss
+++ b/public/assets/scss/timeline.scss
@@ -38,9 +38,9 @@ $mainColor: #616161;
     }
 
     .button_part {
+        padding: 15px;
         float: left;
         background-color: green;
-        height: 300px;
     }
 
 }
