--- a/public/assets/css/timeline.css
+++ b/public/assets/css/timeline.css
@@ -1,95 +1,1 @@
-/* line 3, ../scss/timeline.scss */
-body {
-  width: 100vw;
-  text-align: center;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-/* line 10, ../scss/timeline.scss */
-.top_part, .button_part {
-  width: 100%;
-}
-
-/* line 15, ../scss/timeline.scss */
-.timeline_item {
-  display: inline-block;
-}
-/* line 17, ../scss/timeline.scss */
-.timeline_item .top_part {
-  float: left;
-  background-color: pink;
-  display: inline-block;
-  width: 100%;
-  padding: 15px;
-}
-/* line 24, ../scss/timeline.scss */
-.timeline_item .top_part .left_part {
-  float: left;
-  width: 30%;
-}
-/* line 29, ../scss/timeline.scss */
-.timeline_item .top_part .right_part {
-  float: left;
-  width: 65%;
-  margin-left: 5%;
-}
-/* line 33, ../scss/timeline.scss */
-.timeline_item .top_part .right_part .input {
-  width: 100%;
-}
-/* line 40, ../scss/timeline.scss */
-.timeline_item .button_part {
-  float: left;
-  background-color: green;
-  height: 300px;
-}
-
-/* line 48, ../scss/timeline.scss */
-._container {
-  text-align: right;
-}
-
-/* line 52, ../scss/timeline.scss */
-.timeline_item {
-  margin: 20px 0px;
-  width: 90%;
-  display: inline-block;
-  position: relative;
-  border-radius: 5px;
-  text-align: left;
-  -moz-box-shadow: 2px 2px 3px 2px #616161;
-  -webkit-box-shadow: 2px 2px 3px 2px #616161;
-  box-shadow: 2px 2px 3px 2px #616161;
-}
-/* line 67, ../scss/timeline.scss */
-.timeline_item:after, .timeline_item:before, .timeline_item .timeline_date {
-  content: "";
-  display: block;
-  position: absolute;
-  left: -10%;
-}
-/* line 74, ../scss/timeline.scss */
-.timeline_item .timeline_date {
-  display: inline;
-  top: calc(20% - 3px);
-  left: calc(-10% + 12px);
-}
-/* line 80, ../scss/timeline.scss */
-.timeline_item:before {
-  top: 0px;
-  background-color: #616161;
-  width: 3px;
-  height: calc(100% + 44px);
-}
-/* line 87, ../scss/timeline.scss */
-.timeline_item:after {
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  top: 20%;
-  left: calc(-10% - 6px);
-  border: 3px solid #616161;
-  background-color: white;
-}
+body{width:100vw;text-align:center;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}.top_part,.button_part{width:100%}.timeline_item{display:inline-block}.timeline_item .top_part{float:left;background-color:pink;display:inline-block;width:100%;padding:15px}.timeline_item .top_part .left_part{float:left;width:30%}.timeline_item .top_part .right_part{float:left;width:65%;margin-left:5%}.timeline_item .top_part .right_part .input{width:100%}.timeline_item .button_part{padding:15px;float:left;background-color:green}._container{text-align:right}.timeline_item{margin:20px 0px;width:90%;display:inline-block;position:relative;border-radius:5px;text-align:left;-moz-box-shadow:2px 2px 3px 2px #616161;-webkit-box-shadow:2px 2px 3px 2px #616161;box-shadow:2px 2px 3px 2px #616161}.timeline_item:after,.timeline_item:before,.timeline_item .timeline_date{content:"";display:block;position:absolute;left:-10%}.timeline_item .timeline_date{display:inline;top:calc(20% - 3px);left:calc(-10% + 12px)}.timeline_item:before{top:0px;background-color:#616161;width:3px;height:calc(100% + 44px)}.timeline_item:after{width:15px;height:15px;border-radius:50%;top:20%;left:calc(-10% - 6px);border:3px solid #616161;background-color:white}
